# event-camera-related-code

./: binary.m  converter.py  converter_new.py  csv_data.py  my_blink.ino  publisher.py  reader.py  subscriber.py  subscriber_1.py  with_roi.py
new_tracking_fa_sa/: faster_subs.py  force_subscribers.py  metavision_spatter_tracking  (copy).cpp  metavision_spatter_tracking_b .cpp  metavision_spatter_tracking_original_two_markers.cpp  simple_video_writer.cpp
src/: 2024-03-16-09-04-39.csv  2024-03-16-09-05-37.csv  conf_subs.py  const_marker_converter_new.py  const_marker_metavision_data_rate.py  const_marker_reader.py  metavision_spatter_tracking.cpp  vibr.py
tracking/: CMakeLists.txt  README  out.bias  package.xml
tracking/include/tracking/: simple_timer.h  simple_video_writer.h
tracking/src/: metavision_spatter_tracking.cpp  simple_timer.cpp
